# mega-sistema-ia

./: .env.example  .gitignore  BRIEF_MEGA_SISTEMA.md  CLAUDE.md  README.md  pyproject.toml  sofia.config.yaml
app/: config.py  main.py  outbound_worker.py
app/services/: anthropic_service.py  calcom_service.py  notion_service.py  retell_service.py  twilio_service.py
app/webhooks/: retell_handler.py  twilio_handler.py
dashboard/: .env.example  .gitignore  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/calls/: route.ts
dashboard/src/app/api/leads/: route.ts
dashboard/src/app/api/settings/: route.ts
dashboard/src/app/api/stats/: route.ts
dashboard/src/app/api/trigger-outbound/: route.ts
dashboard/src/app/configuracion/: page.tsx  settings-form.tsx
dashboard/src/app/leads/: page.tsx
dashboard/src/app/llamadas/: page.tsx
dashboard/src/components/: shell.tsx  sidebar.tsx
dashboard/src/lib/: config.ts  notion.ts  retell.ts
prompts/: abogados.yaml  dental.yaml  gimnasio.yaml  inmobiliaria.yaml  restaurante.yaml
scripts/: customize.py  setup.py  status.py  test_services.py  validate.py
